force-app/main/default/objects/RTV_Order_Item__c/RTV_Order_Item__c.object-meta.xml
<CustomObject>
    <description>Order Item for one SKU</description>
    <label>RTV Order Item</label>
    <nameField>
        <label>Item Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTV Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>