force-app/main/default/objects/RTV_Order_Item__c/fields/Actual_Amount_inV__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_inV__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Amount(CNY/incl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>