force-app/main/default/objects/RTV_Order_Item__c/fields/Actual_Amount_inV_Rd__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_inV_Rd__c</fullName>
    <formula>IF(
ISNULL(RTV_Order__r.Insp_CS_Approve_Time__c) &amp;&amp;
(
$Profile.Name = &apos;RMS WSL HQ&apos; ||
$Profile.Name = &apos;RMS WSL Reg Branch&apos; ||
$Profile.Name = &apos;RMS WSL Sold To&apos; ||
$Profile.Name = &apos;RMS WSL Ship To&apos; ||
$Profile.Name = &apos;RMS WSL Ship To -Only DEF&apos; 
),
0,
Actual_Amount_inV__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Amount (CNY/incl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>