force-app/main/default/objects/RTV_Order_Item__c/fields/Application_Amount__c.field-meta.xml
<CustomField>
    <fullName>Application_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Application Amount (USD/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>