force-app/main/default/objects/RTV_Order_Item__c/fields/Application_QTY__c.field-meta.xml
<CustomField>
    <fullName>Application_QTY__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The quantity of customer application</description>
    <inlineHelpText>The quantity of customer application</inlineHelpText>
    <label>Application QTY</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>