force-app/main/default/objects/RTV_Order_Item__c/fields/Application_Remark__c.field-meta.xml
<CustomField>
    <fullName>Application_Remark__c</fullName>
    <description>上传PackingList的备注</description>
    <label>Application Remark</label>
    <length>200</length>
    <type>Text</type>
</CustomField>