force-app/main/default/objects/RTV_Order_Item__c/fields/Bar_Code__c.field-meta.xml
<CustomField>
    <fullName>Bar_Code__c</fullName>
    <label>Bar Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>