force-app/main/default/objects/RTV_Order_Item__c/fields/BU_2__c.field-meta.xml
<CustomField>
    <fullName>BU_2__c</fullName>
    <description>The first 2 characters of product&apos;s BU</description>
    <inlineHelpText>The first 2 characters of product&apos;s BU</inlineHelpText>
    <label>BU</label>
    <length>3</length>
    <type>Text</type>
</CustomField>