force-app/main/default/objects/RTV_Order_Item__c/fields/BudgetQTY__c.field-meta.xml
<CustomField>
    <fullName>BudgetQTY__c</fullName>
    <label>BudgetQTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>