force-app/main/default/objects/RTV_Order_Item__c/fields/Condition_Value_ZDSI_D__c.field-meta.xml
<CustomField>
    <fullName>Condition_Value_ZDSI_D__c</fullName>
    <label>Condition_Value(ZDSI)_D</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>