force-app/main/default/objects/RTV_Order_Item__c/fields/DEF_Detail_Count__c.field-meta.xml
<CustomField>
    <fullName>DEF_Detail_Count__c</fullName>
    <description>关联DEF_Detail的明细行数</description>
    <label>DEF Detail Count</label>
    <summaryForeignKey>RTV_Order_Item_DEF_Detail__c.RTV_Order_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>