force-app/main/default/objects/RTV_Order_Item__c/fields/Defective_Box_Code__c.field-meta.xml
<CustomField>
    <fullName>Defective_Box_Code__c</fullName>
    <description>该BoxCode仅用于Defective类型，Takeback类型的BoxCode请参考PackingDetail</description>
    <label>Box Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>