force-app/main/default/objects/RTV_Order_Item__c/fields/Defective_Reason__c.field-meta.xml
<CustomField>
    <fullName>Defective_Reason__c</fullName>
    <label>Defective Reason</label>
    <length>40</length>
    <type>Text</type>
</CustomField>