force-app/main/default/objects/RTV_Order_Item__c/fields/Final_Price_D__c.field-meta.xml
<CustomField>
    <fullName>Final_Price_D__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Final Price D (CNY/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>