force-app/main/default/objects/RTV_Order_Item__c/fields/FOB_Rate__c.field-meta.xml
<CustomField>
    <fullName>FOB_Rate__c</fullName>
    <label>FOB(Rate)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>