force-app/main/default/objects/RTV_Order_Item__c/fields/FOB_USD__c.field-meta.xml
<CustomField>
    <fullName>FOB_USD__c</fullName>
    <label>FOB(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>