force-app/main/default/objects/RTV_Order_Item__c/fields/Inbound_QTY__c.field-meta.xml
<CustomField>
    <fullName>Inbound_QTY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Inbound QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>