force-app/main/default/objects/RTV_Order_Item__c/fields/Insp_Actual_QTY__c.field-meta.xml
<CustomField>
    <fullName>Insp_Actual_QTY__c</fullName>
    <description>质检的实收数量</description>
    <inlineHelpText>质检的实收数量</inlineHelpText>
    <label>Insp Actual QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>