force-app/main/default/objects/RTV_Order_Item__c/fields/Insp_WSL_Remark__c.field-meta.xml
<CustomField>
    <fullName>Insp_WSL_Remark__c</fullName>
    <description>导出Report后，由WSL填写的空白列</description>
    <inlineHelpText>WSL的质检结果备注</inlineHelpText>
    <label>Remark</label>
    <length>100</length>
    <type>Text</type>
</CustomField>