force-app/main/default/objects/RTV_Order_Item__c/fields/Inspect_Amount_A__c.field-meta.xml
<CustomField>
    <fullName>Inspect_Amount_A__c</fullName>
    <inlineHelpText>= Inspect QTY(A) * Selling Unit Price</inlineHelpText>
    <label>Inspect Amount A (CNY/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>