force-app/main/default/objects/RTV_Order_Item__c/fields/Inspect_Amount_A_Rd__c.field-meta.xml
<CustomField>
    <fullName>Inspect_Amount_A_Rd__c</fullName>
    <formula>IF(
 ISNULL(RTV_Order__r.Insp_CS_Approve_Time__c) &amp;&amp; 
 (
  $Profile.Name = &apos;RMS WSL HQ&apos; ||
  $Profile.Name = &apos;RMS WSL Reg Branch&apos; ||
  $Profile.Name = &apos;RMS WSL Sold To&apos; ||
  $Profile.Name = &apos;RMS WSL Ship To&apos; ||
  $Profile.Name = &apos;RMS WSL Ship To -Only DEF&apos; 
 ),
 0,
 Inspect_Amount_A__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspect Amount (A) (CNY/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>