force-app/main/default/objects/RTV_Order_Item__c/fields/Inspect_Amount_B__c.field-meta.xml
<CustomField>
    <fullName>Inspect_Amount_B__c</fullName>
    <inlineHelpText>= Inspect QTY(B) * ( Selling Unit Price - Cost/1.13 )</inlineHelpText>
    <label>Inspect Amount B (CNY/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>