force-app/main/default/objects/RTV_Order_Item__c/fields/Inspect_Amount_B_inV__c.field-meta.xml
<CustomField>
    <fullName>Inspect_Amount_B_inV__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Inspect Amount B (CNY/incl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>