force-app/main/default/objects/RTV_Order_Item__c/fields/Inspect_Amount_D__c.field-meta.xml
<CustomField>
    <fullName>Inspect_Amount_D__c</fullName>
    <inlineHelpText>= Inspect QTY(D) * Selling Unit Price</inlineHelpText>
    <label>Inspect Amount D (CNY/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>