force-app/main/default/objects/RTV_Order_Item__c/fields/Inspect_QTY_B__c.field-meta.xml
<CustomField>
    <fullName>Inspect_QTY_B__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Inspect QTY B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>