force-app/main/default/objects/RTV_Order_Item__c/fields/Inspect_QTY_Difference__c.field-meta.xml
<CustomField>
    <fullName>Inspect_QTY_Difference__c</fullName>
    <description>验收数量差异</description>
    <formula>(Inspect_QTY_A__c + Inspect_QTY_B__c + Inspect_QTY_C__c + Inspect_QTY_D__c ) - Application_QTY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspect QTY Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>