force-app/main/default/objects/RTV_Order_Item__c/fields/Is_Selling_Price_Error__c.field-meta.xml
<CustomField>
    <fullName>Is_Selling_Price_Error__c</fullName>
    <description>存在A,B,D品时，SellingPrice必须有值</description>
    <formula>IF (Selling_Unit_Price__c == 0 &amp;&amp; (Inspect_QTY_A__c&gt;0 || Inspect_QTY_B__c&gt;0 || Inspect_QTY_D__c&gt;0), true, false)</formula>
    <inlineHelpText>If QTY(A,B,D) is not 0, the Selling Unit Price can not be 0</inlineHelpText>
    <label>Is Selling Price Error ?</label>
    <type>Checkbox</type>
</CustomField>