force-app/main/default/objects/RTV_Order_Item__c/fields/IsDTC__c.field-meta.xml
<CustomField>
    <fullName>IsDTC__c</fullName>
    <formula>RTV_Order__r.IsDTC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsDTC</label>
    <type>Checkbox</type>
</CustomField>