force-app/main/default/objects/RTV_Order_Item__c/fields/IsMaterial__c.field-meta.xml
<CustomField>
    <fullName>IsMaterial__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>是否为无实物退残</inlineHelpText>
    <label>IsMaterial</label>
    <type>Checkbox</type>
</CustomField>