force-app/main/default/objects/RTV_Order_Item__c/fields/IsPreInbound__c.field-meta.xml
<CustomField>
    <fullName>IsPreInbound__c</fullName>
    <formula>ISPICKVAL(RTV_Order__r.Status__c, &apos;Insp Confirmed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPreInbound</label>
    <type>Checkbox</type>
</CustomField>