force-app/main/default/objects/RTV_Order_Item__c/fields/IsSpecialDEF__c.field-meta.xml
<CustomField>
    <fullName>IsSpecialDEF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否为&quot;特批&quot;退残</description>
    <inlineHelpText>是否为&quot;特批&quot;退残</inlineHelpText>
    <label>IsSpecialDEF</label>
    <type>Checkbox</type>
</CustomField>