force-app/main/default/objects/RTV_Order_Item__c/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <label>Item Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>