force-app/main/default/objects/RTV_Order_Item__c/fields/LF_Order_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>LF_Order_Auth_Code__c</fullName>
    <description>LF Order Auth Code</description>
    <formula>RTV_Order__r.Name + BU_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LF Order Auth Code</label>
    <type>Text</type>
</CustomField>