force-app/main/default/objects/RTV_Order_Item__c/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <label>Material Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>