force-app/main/default/objects/RTV_Order_Item__c/fields/MSRP__c.field-meta.xml
<CustomField>
    <fullName>MSRP__c</fullName>
    <description>单价（Manufacturer Suggested Retail Price）</description>
    <inlineHelpText>Manufacturer Suggested Retail Price</inlineHelpText>
    <label>MSRP (CNY/incl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>