force-app/main/default/objects/RTV_Order_Item__c/fields/msrp_formula__c.field-meta.xml
<CustomField>
    <fullName>msrp_formula__c</fullName>
    <formula>Application_QTY__c  *  MSRP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>msrp(formula)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>