force-app/main/default/objects/RTV_Order_Item__c/fields/NET__c.field-meta.xml
<CustomField>
    <fullName>NET__c</fullName>
    <description>$NET = MSRP * TradeTerm / TaxRate / ExRate * Discount</description>
    <inlineHelpText>$NET = MSRP * TradeTerm / TaxRate / ExRate * Discount</inlineHelpText>
    <label>Application Unit Price (USD/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>