force-app/main/default/objects/RTV_Order_Item__c/fields/Outside_Range__c.field-meta.xml
<CustomField>
    <fullName>Outside_Range__c</fullName>
    <defaultValue>false</defaultValue>
    <description>退货的商品不在指定范围内</description>
    <label>Outside Range</label>
    <type>Checkbox</type>
</CustomField>