force-app/main/default/objects/RTV_Order_Item__c/fields/POS_SKU__c.field-meta.xml
<CustomField>
    <fullName>POS_SKU__c</fullName>
    <description>POS机中读取的SKU全值</description>
    <label>POS SKU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>