force-app/main/default/objects/RTV_Order_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup Product</description>
    <label>Product</label>
    <referenceTo>RMS_Product__c</referenceTo>
    <relationshipLabel>RTV Order Items</relationshipLabel>
    <relationshipName>Return_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>