force-app/main/default/objects/RTV_Order_Item__c/fields/Program_Discount__c.field-meta.xml
<CustomField>
    <fullName>Program_Discount__c</fullName>
    <formula>RTV_Order__r.Return_Summary__r.RTV_Program__r.Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>