force-app/main/default/objects/RTV_Order_Item__c/fields/Remark_A__c.field-meta.xml
<CustomField>
    <fullName>Remark_A__c</fullName>
    <label>Remark_A</label>
    <length>20</length>
    <type>Text</type>
</CustomField>