force-app/main/default/objects/RTV_Order_Item__c/fields/Remark_B__c.field-meta.xml
<CustomField>
    <fullName>Remark_B__c</fullName>
    <label>Remark_B</label>
    <length>20</length>
    <type>Text</type>
</CustomField>