force-app/main/default/objects/RTV_Order_Item__c/fields/Remark_D__c.field-meta.xml
<CustomField>
    <fullName>Remark_D__c</fullName>
    <label>Remark_D</label>
    <length>20</length>
    <type>Text</type>
</CustomField>