force-app/main/default/objects/RTV_Order_Item__c/fields/RTV_BaoZun_Seeding__c.field-meta.xml
<CustomField>
    <fullName>RTV_BaoZun_Seeding__c</fullName>
    <formula>RTV_Order__r.RTV_Baozun_Seeding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RTV BaoZun Seeding</label>
    <type>Text</type>
</CustomField>