force-app/main/default/objects/RTV_Order_Item__c/fields/RTV_DEF_Summary__c.field-meta.xml
<CustomField>
    <fullName>RTV_DEF_Summary__c</fullName>
    <formula>RTV_Order__r.RTV_DEF_Summary__c</formula>
    <label>RTV DEF Summary</label>
    <type>Text</type>
</CustomField>