force-app/main/default/objects/RTV_Order_Item__c/fields/RTV_Order__c.field-meta.xml
<CustomField>
    <fullName>RTV_Order__c</fullName>
    <description>lookup master object: RTV Order</description>
    <label>RTV Order</label>
    <referenceTo>RTV_Order__c</referenceTo>
    <relationshipLabel>RTV Order Items</relationshipLabel>
    <relationshipName>RTV_Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>