force-app/main/default/objects/RTV_Order_Item__c/fields/Selling_Season__c.field-meta.xml
<CustomField>
    <fullName>Selling_Season__c</fullName>
    <label>Selling Season</label>
    <length>10</length>
    <type>Text</type>
</CustomField>