force-app/main/default/objects/RTV_Order_Item__c/fields/Selling_Type__c.field-meta.xml
<CustomField>
    <fullName>Selling_Type__c</fullName>
    <label>Selling Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>