force-app/main/default/objects/RTV_Order_Item__c/fields/Selling_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Selling_Unit_Price__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>Selling Unit Price (CNY/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>