force-app/main/default/objects/RTV_Order_Item__c/fields/Selling_Unit_Price_CNY_inV__c.field-meta.xml
<CustomField>
    <fullName>Selling_Unit_Price_CNY_inV__c</fullName>
    <formula>Selling_Unit_Price__c * SP_TaxRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>销售单价(CNY/含税)</inlineHelpText>
    <label>Selling Unit Price (CNY/incl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>