force-app/main/default/objects/RTV_Order_Item__c/fields/SKU_BU__c.field-meta.xml
<CustomField>
    <fullName>SKU_BU__c</fullName>
    <description>SKU&apos;s BU (like: APP / FTW)</description>
    <label>SKU BU</label>
    <length>40</length>
    <type>Text</type>
</CustomField>