force-app/main/default/objects/RTV_Order_Item__c/fields/SKU_Budget__c.field-meta.xml
<CustomField>
    <fullName>SKU_Budget__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>商品预算</description>
    <label>SKU Budget</label>
    <referenceTo>RTV_RP_SKU_Budget__c</referenceTo>
    <relationshipLabel>RTV Order Items</relationshipLabel>
    <relationshipName>RTV_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>