force-app/main/default/objects/RTV_Order_Item__c/fields/SKU_Color__c.field-meta.xml
<CustomField>
    <fullName>SKU_Color__c</fullName>
    <label>SKU Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>