force-app/main/default/objects/RTV_Order_Item__c/fields/SKU_Size_Asia__c.field-meta.xml
<CustomField>
    <fullName>SKU_Size_Asia__c</fullName>
    <description>亚码</description>
    <label>SKU Size (Asia)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>