force-app/main/default/objects/RTV_Order_Item__c/fields/SKU_Size_US__c.field-meta.xml
<CustomField>
    <fullName>SKU_Size_US__c</fullName>
    <description>Product US Size</description>
    <label>SKU Size (US)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>