force-app/main/default/objects/RTV_Order_Item__c/fields/SKU_Style__c.field-meta.xml
<CustomField>
    <fullName>SKU_Style__c</fullName>
    <label>SKU Style</label>
    <length>40</length>
    <type>Text</type>
</CustomField>