force-app/main/default/objects/RTV_Order_Item__c/fields/SP_TaxRate__c.field-meta.xml
<CustomField>
    <fullName>SP_TaxRate__c</fullName>
    <description>Tax Rate of Selling Price</description>
    <label>SP TaxRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>