force-app/main/default/objects/RTV_Order_Item__c/fields/Stock_Category__c.field-meta.xml
<CustomField>
    <fullName>Stock_Category__c</fullName>
    <label>Stock Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>