force-app/main/default/objects/RTV_Order_Item__c/fields/Total_Return_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Return_Amount__c</fullName>
    <formula>IF(Inbound_QTY__c == 0, 0, Inspect_Amount_A__c + Inspect_Amount_B__c + Inspect_Amount_D__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>= Inspect Amount (A) + Inspect Amount (B) + Inspect Amount (D)</inlineHelpText>
    <label>Actual Amount (CNY/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>