force-app/main/default/objects/RTV_Order_Item__c/fields/TradeTerm__c.field-meta.xml
<CustomField>
    <fullName>TradeTerm__c</fullName>
    <description>Trade Term</description>
    <label>Trade Term</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>