force-app/main/default/objects/RTV_Order_Item__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Key  = order.name + item.Material_Code__c + item.BU_2__c + item.SKU_Size_US__c + item.Season_Code_CN__c</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Key  = order.name + item.Material_Code__c + item.BU_2__c + item.SKU_Size_US__c + item.Season_Code_CN__c</inlineHelpText>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>