force-app/main/default/objects/RTV_Order_Item__c/recordTypes/Baozun_Seeding.recordType-meta.xml
<RecordType>
    <fullName>Baozun_Seeding</fullName>
    <active>true</active>
    <label>Baozun Seeding</label>
</RecordType>