force-app/main/default/objects/RTV_Order_Item__c/recordTypes/Defective_Order_Item.recordType-meta.xml
<RecordType>
    <fullName>Defective_Order_Item</fullName>
    <active>true</active>
    <label>Defective Order Item</label>
</RecordType>